crates/panache-parser/tests/snapshots/yaml__yaml_suite_Y79Y__008.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: Y79Y/008
input: "?\tkey:\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNEXPECTED_INDENT:tab character used as indentation is not allowed in YAML@1..2]
